# compostr

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: lint.yml  test.yml
examples/: perf.rs
src/: decomposition.rs  lib.rs  scoring.rs  trlib.rs
src/trlib/: consensus.rs  counting.rs  decomposition.rs  motif.rs  nw.rs
trlib/: Cargo.toml
trlib/src/: decomposition.rs  lib.rs  motif.rs  nw.rs  scoring.rs
trlib_cli/: Cargo.toml
trlib_cli/src/: main.rs
trlib_py/: Cargo.toml
trlib_py/src/: decomposition.rs  lib.rs
