[package]
name = "trlib"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
ndarray = "0.17.2"
once_cell = "1.21.4"
parasail-rs = "0.9.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
smallvec = { "version" = "1.15.1", "features" = ["serde"] }
thiserror = "2.0.18"

[dev-dependencies]
rstest = "0.26.1"

[lib]
[[example]]
name = "perf-benchmark"
path = "examples/perf.rs"
