[package]
name = "trlib_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
noodles-core = "0.20.0"
noodles-fasta = "0.62.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
trlib = { path = "../trlib" }
